--- a/provision.yml
+++ b/provision.yml
@@ -1,5 +1,12 @@
 ---
 
+- name: Provision Python
+  hosts: all
+  gather_facts: no
+  tasks:
+    - name: Boostrap python
+      raw: test -e /usr/bin/python || (apt-get -y update && apt-get install -y python-minimal)
+
 - name: Provision Redis
   hosts: all
   roles:
@@ -21,3 +28,13 @@
         mode: 0755
         owner: root
         group: root
+
+- name: Final cleanup
+  hosts: all
+  gather_facts: no
+  tasks:
+    - name: Remove python
+      raw: apt-get purge -y python-minimal && apt-get autoremove -y
+
+    - name: Remove apt lists
+      raw: rm -rf /var/lib/apt/lists/*
